pagina de inicio lista

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <nav id="navi">
-
+        <img src="imagenes/logo.jpeg" id="img-logo" alt="logo de la empresa">
         <ul id="nav-bott">
           <li><a href="index.html"> Inicio </a></li>
            <li><a href="salones.html"> Salones </a></li>
@@ -20,5 +20,16 @@
 
       </nav>
     </header>
+
+     <!--división de la pagina, lado izquierdo-->
+   <div id="box-iz">
+    <h1>Baloongo</h1>
+    <p>Espacios elegantes, para momentos inolvidable</p>
+   </div>
+
+   <div id="box-de">
+    <img src="imagenes/portada.jfif" id="port-img" alt="portada">
+   </div>
+
   </body>
 </html>
