cajas padres de la galerias lista

--- a/salones.html
+++ b/salones.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Other page</title>
+    <title>Baloongo</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="salones.css" />
     <script type="module" src="script.js"></script>
   </head>
   <body>
+
     <header>
       <nav id="navi">
         <img src="imagenes/logo.jpeg" id="img-logo" alt="logo de la empresa">
@@ -17,9 +18,12 @@
            <li><a href="">Menú</a></li>
            <li><a href="">Reservas</a></li>
          </ul>
-
       </nav>
     </header>
-     
+    
+    <div class="box-gal"></div> 
+    <div class="box-gal"></div> 
+    <div class="box-gal"></div> 
+
   </body>
 </html>
