commit la primera foto

--- a/salones.html
+++ b/salones.html
@@ -24,7 +24,7 @@
     <!-- inicio de galeria -->
     <div class="box-gal"> 
       <div class="box-son">
-
+        <img src="imagenes/salon monaco.jpeg" alt="sala monaco">
       </div>  
     </div> 
 
