--- a/salones.html
+++ b/salones.html
@@ -24,19 +24,19 @@
     <!-- inicio de galeria -->
     <div class="box-gal"> 
       <div class="box-son">
-        <img src="imagenes/salon monaco.jpeg" alt="sala monaco">
+        <img src="imagenes/salon belice.jpeg" alt="sala monaco">
       </div>  
     </div> 
 
     <div class="box-gal"> 
       <div class="box-son">
-        
+        <img src="imagenes/salon monaco.jpeg" alt="">
       </div>
 
     </div> 
     <div class="box-gal">
        <div class="box-son">
-        
+        <img src="imagenes/salon qatar.jpeg" alt="">
       </div>
     </div> 
 
