nombres de salones lsita

--- a/salones.html
+++ b/salones.html
@@ -25,18 +25,23 @@
     <div class="box-gal"> 
       <div class="box-son">
         <img src="imagenes/salon belice.jpeg" alt="sala monaco">
+        <h2>Salon Belice</h2>
       </div>  
     </div> 
 
     <div class="box-gal"> 
       <div class="box-son">
         <img src="imagenes/salon monaco.jpeg" alt="">
+        <h2>Salon Monaco</h2>
+
       </div>
 
     </div> 
     <div class="box-gal">
        <div class="box-son">
         <img src="imagenes/salon qatar.jpeg" alt="">
+        <h2>Salon Qatar</h2>
+
       </div>
     </div> 
 
