2da pagina lista

--- a/salones.html
+++ b/salones.html
@@ -26,14 +26,18 @@
       <div class="box-son">
         <img src="imagenes/salon belice.jpeg" alt="sala monaco">
         <h2>Salon Belice</h2>
+          <p>capacidad: de 20 a 30 personas </p>
+          <p>3 saloneros</p>
+
       </div>  
     </div> 
 
     <div class="box-gal"> 
       <div class="box-son">
         <img src="imagenes/salon monaco.jpeg" alt="">
-        <h2>Salon Monaco</h2>
-
+        <h2>Salon Mónaco</h2>
+        <p>capacidad: de 40 a 60 personas </p>
+        <p>4 saloneros</p>
       </div>
 
     </div> 
@@ -41,7 +45,8 @@
        <div class="box-son">
         <img src="imagenes/salon qatar.jpeg" alt="">
         <h2>Salon Qatar</h2>
-
+        <p>capacidad: de 60 a 90 personas </p>
+        <p>5 saloneros</p>
       </div>
     </div> 
 
