botones re serva listo

--- a/salones.html
+++ b/salones.html
@@ -28,7 +28,7 @@
         <h2>Salon Belice</h2>
           <p>capacidad: de 20 a 30 personas </p>
           <p>3 saloneros</p>
-
+          <button>Reservar</button>
       </div>  
     </div> 
 
@@ -38,6 +38,8 @@
         <h2>Salon Mónaco</h2>
         <p>capacidad: de 40 a 60 personas </p>
         <p>4 saloneros</p>
+        <button>Reservar</button>
+
       </div>
 
     </div> 
@@ -47,6 +49,8 @@
         <h2>Salon Qatar</h2>
         <p>capacidad: de 60 a 90 personas </p>
         <p>5 saloneros</p>
+        <button>Reservar</button>
+
       </div>
     </div> 
 
