--- a/salones.html
+++ b/salones.html
@@ -15,7 +15,7 @@
         <ul id="nav-bott">
           <li><a href="index.html"> Inicio </a></li>
            <li><a href="salones.html"> Salones </a></li>
-           <li><a href="">Menú</a></li>
+           <li><a href="menu.html">Menú</a></li>
            <li><a href="">Reservas</a></li>
          </ul>
       </nav>
